# Copyright (C) 2013 Christian Dywan <christian@twotoasts.de>

include(FindConvert)
if (NOT CONVERT_FOUND)
    message(FATAL_ERROR "rsvg-convert not found")
endif ()

include(FindIntltool)
if (NOT INTLTOOL_MERGE_FOUND)
    message(FATAL_ERROR "intltool-merge not found")
elseif (NOT INTLTOOL_UPDATE_FOUND)
    message(FATAL_ERROR "intltool-update not found")
endif ()

file(GLOB_RECURSE DATA_FILES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
list(REMOVE_ITEM DATA_FILES "CMakeLists.txt")

foreach(FILE ${DATA_FILES})
    string(FIND ${FILE} "faq." FAQ_FILE)
    string(FIND ${FILE} "midori." MIDORI_FILE)
    string(FIND ${FILE} ".desktop" DESKTOP_FILE)
    string(FIND ${FILE} ".appdata.xml" APPDATA_FILE)
    string(FIND ${FILE} ".svg" SVG_FILE)
    if (FAQ_FILE GREATER -1)
        install(FILES ${FILE} DESTINATION ${CMAKE_INSTALL_DOCDIR})
    elseif (DESKTOP_FILE GREATER -1 AND NOT WIN32)
        string(SUBSTRING ${FILE} 0 ${DESKTOP_FILE} DESKTOP_ID)
        INTLTOOL_MERGE_DESKTOP (${DESKTOP_ID} po)
    elseif (APPDATA_FILE GREATER -1 AND NOT WIN32)
        string(SUBSTRING ${FILE} 0 ${APPDATA_FILE} DESKTOP_ID)
        INTLTOOL_MERGE_APPDATA (${DESKTOP_ID} po)
        # install(FILES ${FILE} DESTINATION ${CMAKE_INSTALL_DATADIR}/appdata/)
    elseif (SVG_FILE GREATER -1)
        string(SUBSTRING ${FILE} 0 ${SVG_FILE} IMG_ID)
        SVG2PNG (${IMG_ID} "${CMAKE_INSTALL_DATADIR}/midori/res/")
    elseif(MIDORI_FILE GREATER -1)
    else()
        string(FIND ${FILE} "/" IS_DIR)
        if (IS_DIR GREATER -1)
            string(REPLACE "/" ";" DIR_LIST ${FILE})
            LIST(GET DIR_LIST 0 S_DIR)
            LIST(GET DIR_LIST 1 S_FILE)
            install(FILES ${S_DIR}/${S_FILE} DESTINATION ${CMAKE_INSTALL_DATADIR}/midori/res/${S_DIR})
        else ()
            install(FILES ${FILE} DESTINATION ${CMAKE_INSTALL_DATADIR}/midori/res/)
        endif()
    endif()

endforeach()
